# FunnelCanary

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml
docs/: ERROR_HANDLING.md
skills/calculation/: SKILL.md
skills/clarification/: SKILL.md
skills/code_analysis/: SKILL.md
skills/comparative_analysis/: SKILL.md
skills/creative_generation/: SKILL.md
skills/critical_thinking/: SKILL.md
skills/decision_support/: SKILL.md
skills/deep_research/: SKILL.md
skills/learning_assistant/: SKILL.md
skills/planning/: SKILL.md
skills/problem_decomposition/: SKILL.md
skills/reflection/: SKILL.md
skills/research/: SKILL.md
skills/summarization/: SKILL.md
src/funnel_canary/: __init__.py  agent.py  config.py  prompts.py  tools.py
src/funnel_canary/cognitive/: __init__.py  safety.py  state.py  strategy.py
src/funnel_canary/context/: __init__.py  manager.py  summarizer.py
src/funnel_canary/memory/: __init__.py  models.py  store.py
src/funnel_canary/prompts/: __init__.py  base.py  builder.py
src/funnel_canary/provenance/: __init__.py  extractor.py  generator.py  models.py
src/funnel_canary/skills/: __init__.py  loader.py  models.py  registry.py
src/funnel_canary/tools/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  stability_test_report.md
tests/agent/: __init__.py  test_degradation.py  test_scenarios.py  test_task_completion.py  test_tool_correctness.py
tests/docs/: AGENT_TEST_GUIDE.md  TEST_CASES.md  TEST_PLAN.md
tests/integration/: __init__.py  test_error_recovery.py  test_provenance_cognitive.py  test_tool_provenance.py
tests/unit/: __init__.py
(+21 files in other folders)
